fix: change default sidebar spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -199,7 +199,7 @@ button:disabled {
     align-items: center;
     justify-content: center;
     width: 16px;
-    margin-right: 0.5rem;
+    margin-right: 0.25rem;
     color: var(--text-secondary);
     flex-shrink: 0;
 }
@@ -449,6 +449,7 @@ button:disabled {
 .details {
     padding: 1.5rem;
     padding-top: 0.5rem;
+    flex: 1;
     overflow-y: auto;
     width: 100%;
     height: 100%;
@@ -701,7 +702,7 @@ button:disabled {
 
 
 .tree-view {
-    flex: 1 1 60%;
+    flex: 2;
     overflow-y: auto;
     margin-bottom: 0;
     font-size: 0.875rem;
